--- a/index.html
+++ b/index.html
@@ -34,61 +34,114 @@
             {name: "channel3", url: "https://baidu.com"},
             {name: "channel4", url: "https://baidu.com"},
         ];
-        var Carousel=[
-            {src:"",alt:"11",href:"#"},
-            {src:"",alt:"22",href:"#"},
-            {src:"",alt:"33",href:"#"},
-            {src:"",alt:"44",href:"#"},
-            {src:"",alt:"55",href:"#"},
+        var Carousel = [
+            {src: "", alt: "11", href: "#"},
+            {src: "", alt: "22", href: "#"},
+            {src: "", alt: "33", href: "#"},
+            {src: "", alt: "44", href: "#"},
+            {src: "", alt: "55", href: "#"},
         ]
-        // 绑定数据
+
+        var channels_dict = {
+            "channel-1": {
+                "子栏目1": [
+                    {name: "artist11", href: "#", date: "11-11"},
+                    {name: "artist2", href: "#", date: "11-11"},
+                    {name: "artist3", href: "#", date: "11-12"},
+                    {name: "artist4", href: "#", date: "11-13"},
+                    {name: "artist5", href: "#", date: "11-14"}
+                ],
+                "子栏目2": [
+                    {name: "artist21", href: "#", date: "11-12"},
+                    {name: "artist2", href: "#", date: "11-11"},
+                    {name: "artist3", href: "#", date: "11-12"},
+                    {name: "artist4", href: "#", date: "11-13"},
+                    {name: "artist5", href: "#", date: "11-14"}
+                ],
+                "子栏目3": [
+                    {name: "artist31", href: "#", date: "11-13"},
+                    {name: "artist2", href: "#", date: "11-11"},
+                    {name: "artist3", href: "#", date: "11-12"},
+                    {name: "artist4", href: "#", date: "11-13"},
+                    {name: "artist5", href: "#", date: "11-14"}
+                ],
+            },
+        }
+
+        // 绑定channel数据
+        function setChannelData(channel_id, child_name) {
+            // id 与 实际栏目 的映射
+            var channel_map = new Map([
+                ['channel-1', "channel-1"],
+                ['channel-2', "channel-1"],
+                ['channel-3', "channel-1"],
+                ['channel-4', "channel-1"],
+                ['channel-5', "channel-1"],
+                ['channel-6', "channel-1"],
+            ]);
+
+            let txt = "";
+            console.log();
+            channels_dict[channel_map.get(channel_id)][child_name].forEach(function (element) {
+                txt += "                       <a href=\"" + element.href+
+                    "\" class=\"list-group-item \" style=\"font-size: 16px\">" +
+                    "<span class=\"badge badge-primary badge-date\">" + element.date+
+                    "</span>\n" + element.name+ "\n" + " </a>\n"
+            })
+            return txt
+
+        }
+
         $(document).ready(function () {
             // 绑定导航栏
             let txt = "";
             top_channels.forEach(function (element) {
-
-                txt += "<li><a class=\"head-nav\" href=\"" +
-                    + element.url +
-                    "\">" + element.name +
-                    "</a></li>\n"
-
+                txt += " <li><a class=\"head-nav\" href=\"" +element.url+ "\">" +element.name+ "</a></li>"
             })
             $("#my-nav").append(txt);
             //绑定轮播
             txt = "";
             var i = 0
-            Carousel.forEach(function (element){
-                if(i ===0){
+            Carousel.forEach(function (element) {
+                if (i === 0) {
                     txt += " <div class=\"item active\">\n" +
-                        " <img class=\"img-rounded CarouselImg\" src=\""+
-                        element.src+
-                        "\" alt=\""+
-                        element.alt+
-                        "\" href=\""+
-                        element.href+
-                        "\"> <div class=\"carousel-caption\"><h4>"+
-                        element.alt+
+                        " <img class=\"img-rounded CarouselImg\" src=\"" +
+                        element.src +
+                        "\" alt=\"" +
+                        element.alt +
+                        "\" href=\"" +
+                        element.href +
+                        "\"> <div class=\"carousel-caption\"><h4>" +
+                        element.alt +
                         "</h4><br><br></div></div> \n"
-                }else{
+                } else {
                     txt += " <div class=\"item\">\n" +
-                        " <img class=\"img-rounded CarouselImg\" src=\""+
-                        element.src+
-                        "\" alt=\""+
-                        element.alt+
-                        "\" href=\""+
-                        element.href+
-                        "\"> <div class=\"carousel-caption\"><h4>"+
-                        element.alt+
+                        " <img class=\"img-rounded CarouselImg\" src=\"" +
+                        element.src +
+                        "\" alt=\"" +
+                        element.alt +
+                        "\" href=\"" +
+                        element.href +
+                        "\"> <div class=\"carousel-caption\"><h4>" +
+                        element.alt +
                         "</h4><br><br></div></div> \n"
                 }
-               i+=1
+                i += 1
 
             })
             // console.log(txt)
             $("#myCarousel-img").prepend(txt);
             // console.log($("#myCarousel-img:first-child").attr("class"))
-        })
+        });
+        // 鼠标悬停
+        $(document).ready(function () {
+            $(".child-channel>li").mouseenter(function () {
 
+                $(this).siblings("li").removeClass("active")
+                $(this).addClass("active");
+                $(this).parent().next().html(setChannelData($(this).parent().parent().attr("id"), $(this).children("a").text()))
+            })
+        });
     </script>
 </head>
 <body>
@@ -136,6 +189,7 @@
         <div class="col-md-12  col-lg-12">
             <ul id="my-nav" class="nav nav-pills">
                 <li class="active "><a id="nav-home" class="head-nav" href="{dede:global.cfg_indexurl/}">主页</a></li>
+
             </ul>
 
         </div>
@@ -161,39 +215,39 @@
                             <li data-target="#myCarousel" data-slide-to="4"></li>
                         </ol>
                         <!-- 轮播（Carousel）项目 -->
-                        <div id ="myCarousel-img" class="carousel-inner" >
+                        <div id="myCarousel-img" class="carousel-inner">
 
-<!--                            <div class="item active">-->
-<!--                                    <img id="carousel1" class="img-rounded CarouselImg" src="" alt="" href="#">-->
-<!--                                <div class="carousel-caption"></div>-->
-<!--                            </div>-->
+                            <!--                            <div class="item active">-->
+                            <!--                                    <img id="carousel1" class="img-rounded CarouselImg" src="" alt="" href="#">-->
+                            <!--                                <div class="carousel-caption"></div>-->
+                            <!--                            </div>-->
 
-<!--                            <div class="item">-->
-<!--                                    <img id="carousel2" class="CarouselImg" src="" alt="">-->
-<!--                                <div class="carousel-caption">-->
-<!--                                        <h4>-->
-<!--                                            First Thumbnail label-->
-<!--                                        </h4>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                            <div class="item">-->
-<!--                                <a href="#">-->
-<!--                                    <img id="carousel3" class="CarouselImg" src="" alt="">-->
-<!--                                </a>-->
-<!--                                <div class="carousel-caption"></div>-->
-<!--                            </div>-->
-<!--                            <div class="item">-->
-<!--                                <a href="#">-->
-<!--                                    <img id="carousel4" class="CarouselImg" src="" alt="">-->
-<!--                                </a>-->
-<!--                                <div class="carousel-caption"></div>-->
-<!--                            </div>-->
-<!--                            <div class="item">-->
-<!--                                <a href="#">-->
-<!--                                    <img id="carousel5" class="CarouselImg" src="" alt="">-->
-<!--                                </a>-->
-<!--                                <div class="carousel-caption"></div>-->
-<!--                            </div>-->
+                            <!--                            <div class="item">-->
+                            <!--                                    <img id="carousel2" class="CarouselImg" src="" alt="">-->
+                            <!--                                <div class="carousel-caption">-->
+                            <!--                                        <h4>-->
+                            <!--                                            First Thumbnail label-->
+                            <!--                                        </h4>-->
+                            <!--                                </div>-->
+                            <!--                            </div>-->
+                            <!--                            <div class="item">-->
+                            <!--                                <a href="#">-->
+                            <!--                                    <img id="carousel3" class="CarouselImg" src="" alt="">-->
+                            <!--                                </a>-->
+                            <!--                                <div class="carousel-caption"></div>-->
+                            <!--                            </div>-->
+                            <!--                            <div class="item">-->
+                            <!--                                <a href="#">-->
+                            <!--                                    <img id="carousel4" class="CarouselImg" src="" alt="">-->
+                            <!--                                </a>-->
+                            <!--                                <div class="carousel-caption"></div>-->
+                            <!--                            </div>-->
+                            <!--                            <div class="item">-->
+                            <!--                                <a href="#">-->
+                            <!--                                    <img id="carousel5" class="CarouselImg" src="" alt="">-->
+                            <!--                                </a>-->
+                            <!--                                <div class="carousel-caption"></div>-->
+                            <!--                            </div>-->
                             <!-- 轮播（Carousel）导航 -->
                             <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
                                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -262,10 +316,10 @@
                 <!--                栏目1-->
                 <div id="channel-1" class="col-md-6  col-lg-6 column ">
                     <p class="Channel-title "><span class="glyphicon glyphicon-list-alt">&ensp;</span> 栏目1</p>
-                    <ul class="nav nav-tabs ">
-                        <li class="active "><a href="#">子栏目1</a></li>
-                        <li><a href="#">子栏目2</a></li>
-                        <li><a href="#">子栏目3</a></li>
+                    <ul class="nav nav-tabs child-channel">
+                        <li class="test active"><a target='_blank' href="#">子栏目1</a></li>
+                        <li class=""><a target='_blank' href="#">子栏目2</a></li>
+                        <li class=""><a target='_blank' href="#">子栏目3</a></li>
 
                     </ul>
                     <ul class="list-group">
@@ -290,14 +344,14 @@
                         </a>
                         <a href="#" class="list-group-item " style="font-size: 16px">
                             <span class="badge badge-primary badge-date">11-11</span>
-                            test5
+                            test5555555
                         </a>
                     </ul>
                 </div>
                 <!--                栏目2-->
                 <div id="channel-2" class="col-md-6 col-lg-6 column ">
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目2</p>
-                    <ul class="nav nav-tabs">
+                    <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
                         <li><a href="#">子栏目2</a></li>
                         <li><a href="#">子栏目3</a></li>
@@ -333,7 +387,7 @@
                 <!--            栏目3-->
                 <div id="channel-3" class="col-md-6  col-lg-6 column ">
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目3</p>
-                    <ul class="nav nav-tabs">
+                    <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
                         <li><a href="#">子栏目2</a></li>
                         <li><a href="#">子栏目3</a></li>
@@ -367,7 +421,7 @@
                 <!--            栏目4-->
                 <div id="channel-4" class="col-md-6 col-lg-6 column ">
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目4</p>
-                    <ul class="nav nav-tabs">
+                    <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
                         <li><a href="#">子栏目2</a></li>
                         <li><a href="#">子栏目3</a></li>
@@ -404,7 +458,7 @@
                 <div id="channel-5" class="col-md-6  col-lg-6 column ">
 
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目5</p>
-                    <ul class="nav nav-tabs">
+                    <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
                         <li><a href="#">子栏目2</a></li>
                         <li><a href="#">子栏目3</a></li>
@@ -438,7 +492,7 @@
                 <!--                栏目6-->
                 <div id="channel-6" class="col-md-6 col-lg-6 column">
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目6</p>
-                    <ul class="nav nav-tabs">
+                    <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
                         <li><a href="#">子栏目2</a></li>
                         <li><a href="#">子栏目3</a></li>
