--- a/index_dede_label.html
+++ b/index_dede_label.html
@@ -29,24 +29,91 @@
     </style>
     <script>
         var top_channels = [
-            {dede:channel type='top' row='10' currentstyle="<li class='thisclass'><a href='~typelink~'>~typename~</a> </li>"}
+            {dede:channel type='top' row='10'}
             {name: "[field:typename/]", url: "[field:typelink/]"},
             {/dede:channel}
         ];
+        var Carousel = [
+            {dede:arclist flag='' type='image' row='5' titlelen='70'}
+            {src: "[field:litpic/]", alt: "[field:fulltitle/]", href: "[field:litpic/]"},
+            {/dede:arclist}
+        ]
+        var channels_dict = {}
+        // 绑定数据
+        function setChannelData(channel_id, child_name) {
+            // id 与 实际栏目 的映射
+            var channel_map = new Map([
+                ['channel-1', "局务公开"],
+                ['channel-2', "channel-1"],
+                ['channel-3', "channel-1"],
+                ['channel-4', "channel-1"],
+                ['channel-5', "channel-1"],
+                ['channel-6', "channel-1"],
+            ]);
+
+            let txt = "";
+            console.log();
+            channels_dict[channel_map.get(channel_id)][child_name].forEach(function (element) {
+                txt += "                       <a href=\"" + element.href+
+                    "\" class=\"list-group-item \" style=\"font-size: 16px\">" +
+                    "<span class=\"badge badge-primary badge-date\">" + element.date+
+                    "</span>\n" + element.name+ "\n" + " </a>\n"
+            })
+            return txt
+
+        }
 
         $(document).ready(function () {
-            var txt = ""
+            // 绑定导航栏
+            let txt = "";
             top_channels.forEach(function (element) {
-
-                txt += "<li><a class=\"head-nav\" href=\""
-                    + element.url +
-                    "\">" + element.name +
-                    "</a></li>\n"
+                console.log(element.href)
+                txt += " <li><a class=\"head-nav\" href=\"" +element.url+ "\">" +element.name+ "</a></li>"
+            })
+            $("#my-nav").append(txt);
+            //绑定轮播
+            txt = "";
+            var i = 0
+            Carousel.forEach(function (element) {
+                if (i === 0) {
+                    txt += " <div class=\"item active\">\n" +
+                        " <img class=\" img-rounded \" src=\"" +
+                        element.src +
+                        "\" alt=\"" +
+                        element.alt +
+                        "\" href=\"" +
+                        element.href +
+                        "\"> <div class=\"carousel-caption\"><h4>" +
+                        element.alt +
+                        "</h4><br><br></div></div> \n"
+                } else {
+                    txt += " <div class=\"item\">\n" +
+                        " <img class=\" img-rounded \" src=\"" +
+                        element.src +
+                        "\" alt=\"" +
+                        element.alt +
+                        "\" href=\"" +
+                        element.href +
+                        "\"> <div class=\"carousel-caption\"><h4>" +
+                        element.alt +
+                        "</h4><br><br></div></div> \n"
+                }
+                i += 1
 
             })
+            // console.log(txt)
+            $("#myCarousel-img").prepend(txt);
+            // console.log($("#myCarousel-img:first-child").attr("class"))
+        });
+        $(document).ready(function () {
+            $(".child-channel>li").mouseenter(function () {
 
-            $("#my-nav").append(txt);
-        })
+                $(this).siblings("li").removeClass("active")
+                $(this).addClass("active");
+                $(this).parent().next().html(setChannelData($(this).parent().parent().attr("id"), $(this).children("a").text()))
+            })
+        });
+
     </script>
 </head>
 <body>
@@ -108,6 +175,7 @@
         <div class="col-lg-12 col-md-12 col-sm-12">
             <div class="row clearfix">
                 <!--    幻灯片-->
+                <!--    幻灯片-->
                 <div class="col-lg-5 col-md-5 col-sm-6">
                     <div id="myCarousel" class="carousel slide">
                         <!-- 轮播（Carousel）指标 -->
@@ -119,30 +187,8 @@
                             <li data-target="#myCarousel" data-slide-to="4"></li>
                         </ol>
                         <!-- 轮播（Carousel）项目 -->
-                        <div class="carousel-inner" style="height: 339px">
+                        <div id="myCarousel-img" class="carousel-inner">
 
-                            <div class="item active">
-                                <img id="carousel1" class="img-rounded CarouselImg" src="" alt="">
-                                <div class="carousel-caption"></div>
-                            </div>
-
-                            <div class="item">
-                                <img id="carousel2" class="CarouselImg" src="" alt="">
-                                <div class="carousel-caption"></div>
-                            </div>
-                            <div class="item">
-                                <img id="carousel3" class="CarouselImg" src="" alt="">
-                                <div class="carousel-caption"></div>
-                            </div>
-                            <div class="item">
-                                <img id="carousel4" class="CarouselImg" src="" alt="">
-                                <div class="carousel-caption"></div>
-                            </div>
-                            <div class="item">
-                                <img id="carousel5" class="CarouselImg" src="" alt="">
-                                <div class="carousel-caption"></div>
-                            </div>
-                            <!-- 轮播（Carousel）导航 -->
                             <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
                                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
@@ -194,7 +240,7 @@
             <div class="row clearfix">
                 <div class="col-lg-12 col-md-12 " style="position: relative;margin-top: 25px ;padding-bottom: 30px">
                     <a href="#">
-                        <img class="img-rounded shadow" style="padding: 0" width="100%" src="images/xuexiqiangguo.jpg"
+                        <img class="img-rounded shadow" style="padding: 0" width="100%" src="{dede:global.cfg_templets_skin/}/images/xuexiqiangguo.jpg"
                              alt="学习强国">
                     </a>
                 </div>
@@ -210,7 +256,7 @@
                 <!--                栏目1-->
                 <div id="channel-1" class="col-md-6  col-lg-6 column ">
                     <p class="Channel-title "><span class="glyphicon glyphicon-list-alt">&ensp;</span> 栏目1</p>
-                    <ul class="nav nav-tabs ">
+                    <ul class="nav nav-tabs child-channel">
                         <li class="active "><a href="#">子栏目1</a></li>
                         <li><a href="#">子栏目2</a></li>
                         <li><a href="#">子栏目3</a></li>
@@ -244,7 +290,7 @@
                 </div>
                 <!--                栏目2-->
                 <div id="channel-2" class="col-md-6 col-lg-6 column ">
-                    <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目2</p>
+                    <p class="Channel-title child-channel"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目2</p>
                     <ul class="nav nav-tabs">
                         <li class="active"><a href="#">子栏目1</a></li>
                         <li><a href="#">子栏目2</a></li>
@@ -281,7 +327,7 @@
                 <!--            栏目3-->
                 <div id="channel-3" class="col-md-6  col-lg-6 column ">
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目3</p>
-                    <ul class="nav nav-tabs">
+                    <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
                         <li><a href="#">子栏目2</a></li>
                         <li><a href="#">子栏目3</a></li>
@@ -314,8 +360,8 @@
                 </div>
                 <!--            栏目4-->
                 <div id="channel-4" class="col-md-6 col-lg-6 column ">
-                    <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目4</p>
-                    <ul class="nav nav-tabs">
+                    <p class="Channel-title "><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目4</p>
+                    <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
                         <li><a href="#">子栏目2</a></li>
                         <li><a href="#">子栏目3</a></li>
@@ -352,7 +398,7 @@
                 <div id="channel-5" class="col-md-6  col-lg-6 column ">
 
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目5</p>
-                    <ul class="nav nav-tabs">
+                    <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
                         <li><a href="#">子栏目2</a></li>
                         <li><a href="#">子栏目3</a></li>
@@ -386,7 +432,7 @@
                 <!--                栏目6-->
                 <div id="channel-6" class="col-md-6 col-lg-6 column">
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目6</p>
-                    <ul class="nav nav-tabs">
+                    <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
                         <li><a href="#">子栏目2</a></li>
                         <li><a href="#">子栏目3</a></li>
