--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <![endif]-->
     <script src="js/jquery.min.1.9.1.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/sticky-kit.js"></script>
     <style>
         .header-info {
             margin: 0;
@@ -25,6 +26,17 @@
             /*height: auto;*/
             background-size: 100% auto;
             background: url("images/back_img.jpg") repeat-x;
+        }
+        .content .sidebar {
+            width: 20%;
+            height: 66px;
+            margin: 10px;
+            margin-right: 0;
+            border: 1px solid red;
+            float: right;
+            overflow: hidden;
+            font-family: sans-serif;
+            color: #FFF;
         }
     </style>
     <script>
@@ -83,10 +95,10 @@
             let txt = "";
             console.log();
             channels_dict[channel_map.get(channel_id)][child_name].forEach(function (element) {
-                txt += "                       <a href=\"" + element.href+
+                txt += "                       <a href=\"" + element.href +
                     "\" class=\"list-group-item \" style=\"font-size: 16px\">" +
-                    "<span class=\"badge badge-primary badge-date\">" + element.date+
-                    "</span>\n" + element.name+ "\n" + " </a>\n"
+                    "<span class=\"badge badge-primary badge-date\">" + element.date +
+                    "</span>\n" + element.name + "\n" + " </a>\n"
             })
             return txt
 
@@ -96,7 +108,7 @@
             // 绑定导航栏
             let txt = "";
             top_channels.forEach(function (element) {
-                txt += " <li><a class=\"head-nav\" href=\"" +element.url+ "\">" +element.name+ "</a></li>"
+                txt += " <li><a class=\"head-nav\" href=\"" + element.url + "\">" + element.name + "</a></li>"
             })
             $("#my-nav").append(txt);
             //绑定轮播
@@ -682,5 +694,11 @@
     <p class="text-center small" style="color: whitesmoke"> Copyright &copy; 2021 Modify 中国银行保险监督管理委员会昭通监管分局</p>
 </div>
 
+
+<script type="text/javascript">
+    jQuery(document).ready(function ($) {
+        $(".sidebar").stick_in_parent();
+    });
+</script>
 </body>
 </html>
