--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <![endif]-->
     <script src="js/jquery.min.1.9.1.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/sticky-kit.js"></script>
+    <script src="js/myjs.js"></script>
     <style>
         .header-info {
             margin: 0;
@@ -574,8 +574,8 @@
     </div>
 <!--    广告栏-->
     <div class="sticky-bar">
-        <button type="button" id="hide" class="btn btn-default btn-xs pull-right" >
-            <span class="glyphicon glyphicon-remove"></span>
+        <button type="button" id="hide" class="btn btn-default btn-xs pull-right"  style="font-weight: lighter;">
+            <span class="glyphicon glyphicon-remove" ></span>
         </button>
         <a  href="#"><img class="img-thumbnail" id="sticky-ad.jpg" src="images/sticky-ad.jpg" alt=""></a>
     </div>
