--- a/index_dede_label.html
+++ b/index_dede_label.html
@@ -18,6 +18,7 @@
     <![endif]-->
     <script src="{dede:global.cfg_templets_skin/}/js/jquery.min.1.9.1.js"></script>
     <script src="{dede:global.cfg_templets_skin/}/js/bootstrap.min.js"></script>
+    <script src="{dede:global.cfg_templets_skin/}js/myjs.js"></script>
     <style>
         .header-info {
             margin: 0;
@@ -511,6 +512,13 @@
         </div>
 
     </div>
+    <!--    广告栏-->
+    <div class="sticky-bar">
+        <button type="button" id="hide" class="btn btn-default btn-xs pull-right"  style="font-weight: lighter;">
+            <span class="glyphicon glyphicon-remove" ></span>
+        </button>
+        <a  href="#"><img class="img-thumbnail" id="sticky-ad.jpg" src="images/sticky-ad.jpg" alt=""></a>
+    </div>
 </div>
 <hr style="   height: 1px;border: none; background-color: #CCCCCC">
 <div class="container">
@@ -615,9 +623,9 @@
             </div>
         </div>
         <div class="col-lg-1 col-md-1"></div>
-
     </div>
 </div>
+
 <div class="feet-box">
     <p class="text-center small" style="color: whitesmoke"> Copyright &copy; 2021 Modify 中国银行保险监督管理委员会昭通监管分局</p>
 </div>
