--- a/index_dede_label.html
+++ b/index_dede_label.html
@@ -18,7 +18,7 @@
     <![endif]-->
     <script src="{dede:global.cfg_templets_skin/}/js/jquery.min.1.9.1.js"></script>
     <script src="{dede:global.cfg_templets_skin/}/js/bootstrap.min.js"></script>
-    <script src="{dede:global.cfg_templets_skin/}js/myjs.js"></script>
+    <script src="{dede:global.cfg_templets_skin/}/js/myjs.js"></script>
     <style>
         .header-info {
             margin: 0;
@@ -39,18 +39,40 @@
             {src: "[field:litpic/]", alt: "[field:fulltitle/]", href: "[field:litpic/]"},
             {/dede:arclist}
         ]
-        var channels_dict = {}
+
+        //督查督办
+        var sub_channel_1=[
+            {dede:arclist row=5 titlelen=60 orderby=pubdate typeid='14' flag=''}
+            {name: "[field:fulltitle/]", date: "[field:pubdate function="MyDate('Y-m-d',@me)"/]", href: "[field:arcurl/]"},
+            {/dede:arclist}
+        ]
+        //通报点评
+        var sub_channel_2=[
+            {dede:arclist row=5 titlelen=60 orderby=pubdate typeid='15' flag=''}
+            {name: "[field:fulltitle/]", date: "[field:pubdate function="MyDate('Y-m-d',@me)"/]", href: "[field:arcurl/]"},
+            {/dede:arclist}
+        ]
+        //公告通知
+        var sub_channel_3=[
+            {dede:arclist row=5 titlelen=60 orderby=pubdate typeid='16' flag=''}
+            {name: "[field:fulltitle/]", date: "[field:pubdate function="MyDate('Y-m-d',@me)"/]", href: "[field:arcurl/]"},
+            {/dede:arclist}
+        ]
+
+        function genSubChannelData(sub_list){
+            let txt = "";
+            sub_list.forEach(function (element){
+                txt += "                       <a href=\"" + element.href+
+                    "\" class=\"list-group-item \" style=\"font-size: 16px\">" +
+                    "<span class=\"badge badge-primary badge-date\">" + element.date+
+                    "</span>\n" + element.name+ "\n" + " </a>\n"
+            })
+            console.log(txt);
+            return txt
+        }
+
         // 绑定数据
         function setChannelData(channel_id, child_name) {
-            // id 与 实际栏目 的映射
-            var channel_map = new Map([
-                ['channel-1', "局务公开"],
-                ['channel-2', "channel-1"],
-                ['channel-3', "channel-1"],
-                ['channel-4', "channel-1"],
-                ['channel-5', "channel-1"],
-                ['channel-6', "channel-1"],
-            ]);
 
             let txt = "";
             console.log();
@@ -105,15 +127,28 @@
             // console.log(txt)
             $("#myCarousel-img").prepend(txt);
             // console.log($("#myCarousel-img:first-child").attr("class"))
+
+            // 绑定初始数据
+            $("#channel-1>.list-group").html(genSubChannelData(sub_channel_1))
         });
+        // 子栏目鼠标接触激活
         $(document).ready(function () {
             $(".child-channel>li").mouseenter(function () {
 
                 $(this).siblings("li").removeClass("active")
                 $(this).addClass("active");
-                $(this).parent().next().html(setChannelData($(this).parent().parent().attr("id"), $(this).children("a").text()))
+                if($(this).children().text()==="督查督办"){
+                    $("#channel-1>.list-group").html(genSubChannelData(sub_channel_1))
+                }
+                if($(this).children().text()==="通报点评"){
+                    $("#channel-1>.list-group").html(genSubChannelData(sub_channel_2))
+                }
+                if($(this).children().text()==="公告通知"){
+                    $("#channel-1>.list-group").html(genSubChannelData(sub_channel_3))
+                }
             })
         });
+        //绑定子栏目数据
 
     </script>
 </head>
@@ -213,7 +248,8 @@
 
                         <a href="#" class="list-group-item " style="font-size: 16px">
                             <span class="badge badge-primary badge-date">11-11</span>
-                            test1
+
+
                         </a>
 
                         <a href="#" class="list-group-item" style="font-size: 16px">
@@ -256,11 +292,11 @@
             <div class="row clearfix">
                 <!--                栏目1-->
                 <div id="channel-1" class="col-md-6  col-lg-6 column ">
-                    <p class="Channel-title "><span class="glyphicon glyphicon-list-alt">&ensp;</span> 栏目1</p>
+                    <p class="Channel-title "><span class="glyphicon glyphicon-list-alt">&ensp;</span> 局务公开</p>
                     <ul class="nav nav-tabs child-channel">
-                        <li class="active "><a href="#">子栏目1</a></li>
-                        <li><a href="#">子栏目2</a></li>
-                        <li><a href="#">子栏目3</a></li>
+                        <li class="active "><a href="#">督查督办</a></li>
+                        <li><a href="#">通报点评</a></li>
+                        <li><a href="#">公告通知</a></li>
 
                     </ul>
                     <ul class="list-group">
@@ -513,11 +549,11 @@
 
     </div>
     <!--    广告栏-->
-    <div class="sticky-bar">
+    <div class="sticky-bar" >
         <button type="button" id="hide" class="btn btn-default btn-xs pull-right"  style="font-weight: lighter;">
             <span class="glyphicon glyphicon-remove" ></span>
         </button>
-        <a  href="#"><img class="img-thumbnail" id="sticky-ad.jpg" src="images/sticky-ad.jpg" alt=""></a>
+        <a  href="#"><img class="img-thumbnail" id="sticky-ad.jpg" src="{dede:global.cfg_templets_skin/}/images/sticky-ad.jpg" alt=""></a>
     </div>
 </div>
 <hr style="   height: 1px;border: none; background-color: #CCCCCC">
@@ -623,9 +659,9 @@
             </div>
         </div>
         <div class="col-lg-1 col-md-1"></div>
+
     </div>
 </div>
-
 <div class="feet-box">
     <p class="text-center small" style="color: whitesmoke"> Copyright &copy; 2021 Modify 中国银行保险监督管理委员会昭通监管分局</p>
 </div>
