--- a/index_dede_label.html
+++ b/index_dede_label.html
@@ -163,9 +163,9 @@
             </div>
             <div class="col-lg-7">
                 <div class="align-self-center mx-auto bg-white text-primary">
-                    <h2 id="web-title">中国银行监督管理委员会 ● 昭通分局</h2>
+                    <h2 id="web-title">中国银行保险监督管理委员会 ● 昭通分局</h2>
                     <p></p>
-                    <h4 id="web-title-en">China Banking Regulatory Commission, Zhaotong branch</h4>
+                    <h4 id="web-title-en">China Banking And Insurance Regulatory Commission, Zhaotong Branch</h4>
                 </div>
             </div>
 
@@ -174,7 +174,7 @@
 
                 <br>
                 <br>
-                <form class="form-inline my-2 my-lg-0" role="search" method="get" action="todo" target="_blank">
+                <form class="form-inline my-2 my-lg-0" role="search" method="get" target="_blank" action="{dede:global name='cfg_phpurl'/}/search.php">
                     <div class="input-group">
                         <input type="text" class="form-control" name="keyword" placeholder="全站检索">
                         <span class="input-group-btn">
@@ -248,7 +248,7 @@
 
                         <a href="#" class="list-group-item " style="font-size: 16px">
                             <span class="badge badge-primary badge-date">11-11</span>
-
+                            test1
 
                         </a>
 
@@ -303,7 +303,7 @@
 
                         <a href="#" class="list-group-item " style="font-size: 16px">
                             <span class="badge badge-primary badge-date">11-11</span>
-                            test1
+                            test 1
                         </a>
 
                         <a href="#" class="list-group-item" style="font-size: 16px">
@@ -663,7 +663,7 @@
     </div>
 </div>
 <div class="feet-box">
-    <p class="text-center small" style="color: whitesmoke"> Copyright &copy; 2021 Modify 中国银行保险监督管理委员会昭通监管分局</p>
+    <p class="text-center small" style="color: whitesmoke"> Copyright &copy; 2021-2022 Modify 中国银行保险监督管理委员会昭通监管分局</p>
 </div>
 </body>
 </html>
