--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
             </div>
             <div class="col-lg-7">
                 <div class="align-self-center mx-auto bg-white text-primary">
-                    <h2 id="web-title">中国银行监督管理委员会 ● 昭通分局</h2>
+                    <h2 id="web-title">中国银行保险监督管理委员会 ● 昭通分局</h2>
                     <p></p>
-                    <h4 id="web-title-en">China Banking Regulatory Commission, Zhaotong branch</h4>
+                    <h4 id="web-title-en">China Banking And Insurance Regulatory Commission, Zhaotong Branch</h4>
                 </div>
             </div>
 
@@ -690,12 +690,9 @@
     </div>
 </div>
 <div class="feet-box">
-    <p class="text-center small" style="color: whitesmoke"> Copyright &copy; 2021 Modify 中国银行保险监督管理委员会昭通监管分局</p>
+    <p class="text-center small" style="color: whitesmoke"> Copyright &copy; 2021-2022 Modify 中国银行保险监督管理委员会昭通监管分局</p>
 </div>
 
 
-<script type="text/javascript">
-
-</script>
 </body>
 </html>
