找唐主任，找了跟没找一样

--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
     <div class="container ">
         <div class="row ">
             <div class="col-lg-1">
-                <img width="100" src="images/CBIRC.png" class="rounded float-right"
-                     alt="CIRC">
+<!--                <img width="100" src="images/CBIRC.png" class="rounded float-right"-->
+<!--                     alt="CIRC">-->
             </div>
             <div class="col-lg-7">
                 <div class="align-self-center mx-auto bg-white text-primary">
                     <h2 id="web-title">中国银行保险监督管理委员会 ● 昭通分局</h2>
                     <p></p>
-                    <h4 id="web-title-en">China Banking And Insurance Regulatory Commission, Zhaotong Branch</h4>
+                    <h4 id="web-title-en">China Banking And Insurance Regulatory Commission Of Zhaotong Branch</h4>
                 </div>
             </div>
 
@@ -312,10 +312,10 @@
     <!--    第二列-->
     <div class="row clearfix">
         <!--        文章列表-->
-        <div class="col-md-9  col-lg-9 column">
+        <div class="col-md-9  col-lg-9 col-sm-12 column">
             <div class="row clearfix">
                 <!--                栏目1-->
-                <div id="channel-1" class="col-md-6  col-lg-6 column ">
+                <div id="channel-1" class="col-md-6  col-lg-6 col-sm-6 column ">
                     <p class="Channel-title "><span class="glyphicon glyphicon-list-alt">&ensp;</span> 栏目1</p>
                     <ul class="nav nav-tabs child-channel">
                         <li class="test active"><a target='_blank' href="#">子栏目1</a></li>
@@ -350,7 +350,7 @@
                     </ul>
                 </div>
                 <!--                栏目2-->
-                <div id="channel-2" class="col-md-6 col-lg-6 column ">
+                <div id="channel-2" class="col-md-6 col-lg-6 col-sm-6 column ">
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目2</p>
                     <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
@@ -386,7 +386,7 @@
             </div>
             <div class="row clearfix">
                 <!--            栏目3-->
-                <div id="channel-3" class="col-md-6  col-lg-6 column ">
+                <div id="channel-3" class="col-md-6  col-lg-6 col-sm-6 column ">
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目3</p>
                     <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
@@ -420,7 +420,7 @@
                     </ul>
                 </div>
                 <!--            栏目4-->
-                <div id="channel-4" class="col-md-6 col-lg-6 column ">
+                <div id="channel-4" class="col-md-6 col-lg-6 col-sm-6  column ">
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目4</p>
                     <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
@@ -456,7 +456,7 @@
             </div>
             <div class="row clearfix">
                 <!--                        栏目5-->
-                <div id="channel-5" class="col-md-6  col-lg-6 column ">
+                <div id="channel-5" class="col-md-6  col-lg-6 col-sm-6 column ">
 
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目5</p>
                     <ul class="nav nav-tabs child-channel">
@@ -491,7 +491,7 @@
                     </ul>
                 </div>
                 <!--                栏目6-->
-                <div id="channel-6" class="col-md-6 col-lg-6 column">
+                <div id="channel-6" class="col-md-6 col-lg-6 col-sm-6 column">
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目6</p>
                     <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
@@ -528,8 +528,7 @@
 
         </div>
         <!--        侧栏-->
-        <div class="col-md-3  col-lg-3 column" style="background: white;margin-top: 30px">
-            <br>
+        <div class="col-md-3  col-lg-3  col-sm-6 column" style="background: white;margin-top: 30px">
             <div class="row clearfix side-title" id="side-newest">
                 <div class="col-md-6 ">
 
@@ -541,7 +540,7 @@
                 </div>
             </div>
             <div class="row clearfix">
-                <div class="col-md-12 col-lg-12">
+                <div class="col-md-12 col-lg-12 ">
                     <ul id="side-newest-content" class="list-group">
                         <a class="list-group-item " href="#">111 </a>
                         <a class="list-group-item " href="#">111</a>
@@ -560,7 +559,7 @@
                 </div>
             </div>
             <div class="row clearfix">
-                <div class="col-md-12 col-lg-12">
+                <div class="col-md-12 col-lg-12 col-sm-12 ">
                     <ul id="side-channel-content" class="list-group">
                         <a class="list-group-item" href="#">channel 1</a>
                         <a class="list-group-item" href="#">channel 2</a>
@@ -574,10 +573,19 @@
     </div>
 <!--    广告栏-->
     <div class="sticky-bar">
-        <button type="button" id="hide" class="btn btn-default btn-xs pull-right"  style="font-weight: lighter;">
+        <button type="button" class="btn btn-default btn-xs pull-right hide-btn"  style="font-weight: lighter;">
             <span class="glyphicon glyphicon-remove" ></span>
         </button>
-        <a  href="#"><img class="img-thumbnail" id="sticky-ad.jpg" src="images/sticky-ad.jpg" alt=""></a>
+        <a  href="#"><img class="img-thumbnail"  src="images/sticky-ad.jpg" alt=""></a>
+        <button type="button"  class="btn btn-default btn-xs pull-right hide-btn"  style="font-weight: lighter;">
+            <span class="glyphicon glyphicon-remove" ></span>
+        </button>
+        <a  href="#"><img class="img-thumbnail"  src="images/sticky-ad.jpg" alt=""></a>
+        <button type="button" class="btn btn-default btn-xs pull-right hide-btn"  style="font-weight: lighter;">
+            <span class="glyphicon glyphicon-remove" ></span>
+        </button>
+        <a  href="#"><img class="img-thumbnail" src="images/sticky-ad.jpg" alt=""></a>
+<!--        <a  href="#">啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</a>-->
     </div>
 </div>
 <hr style="   height: 1px;border: none; background-color: #CCCCCC">
