--- a/index_dede_label.html
+++ b/index_dede_label.html
@@ -158,14 +158,14 @@
     <div class="container ">
         <div class="row ">
             <div class="col-lg-1">
-                <img width="100" src="{dede:global.cfg_templets_skin/}/images/CBIRC.png" class="rounded float-right"
-                     alt="CIRC">
+                <!--                <img width="100" src="{dede:global.cfg_templets_skin/}/images/CBIRC.png" class="rounded float-right"-->
+                <!--                     alt="CIRC">-->
             </div>
             <div class="col-lg-7">
                 <div class="align-self-center mx-auto bg-white text-primary">
                     <h2 id="web-title">中国银行保险监督管理委员会 ● 昭通分局</h2>
                     <p></p>
-                    <h4 id="web-title-en">China Banking And Insurance Regulatory Commission, Zhaotong Branch</h4>
+                    <h4 id="web-title-en">China Banking And Insurance Regulatory Commission Of Zhaotong Branch</h4>
                 </div>
             </div>
 
@@ -288,10 +288,10 @@
     <!--    第二列-->
     <div class="row clearfix">
         <!--        文章列表-->
-        <div class="col-md-9  col-lg-9 column">
+        <div class="col-md-9  col-lg-9 col-sm-12 column">
             <div class="row clearfix">
                 <!--                栏目1-->
-                <div id="channel-1" class="col-md-6  col-lg-6 column ">
+                <div id="channel-1" class="col-md-6  col-lg-6 col-sm-6 column ">
                     <p class="Channel-title "><span class="glyphicon glyphicon-list-alt">&ensp;</span> 局务公开</p>
                     <ul class="nav nav-tabs child-channel">
                         <li class="active "><a href="#">督查督办</a></li>
@@ -326,9 +326,9 @@
                     </ul>
                 </div>
                 <!--                栏目2-->
-                <div id="channel-2" class="col-md-6 col-lg-6 column ">
-                    <p class="Channel-title child-channel"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目2</p>
-                    <ul class="nav nav-tabs">
+                <div id="channel-2" class="col-md-6 col-lg-6 col-sm-6 column ">
+                    <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目2</p>
+                    <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
                         <li><a href="#">子栏目2</a></li>
                         <li><a href="#">子栏目3</a></li>
@@ -362,7 +362,7 @@
             </div>
             <div class="row clearfix">
                 <!--            栏目3-->
-                <div id="channel-3" class="col-md-6  col-lg-6 column ">
+                <div id="channel-3" class="col-md-6  col-lg-6 col-sm-6 column ">
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目3</p>
                     <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
@@ -396,7 +396,7 @@
                     </ul>
                 </div>
                 <!--            栏目4-->
-                <div id="channel-4" class="col-md-6 col-lg-6 column ">
+                <div id="channel-4" class="col-md-6 col-lg-6 col-sm-6 column ">
                     <p class="Channel-title "><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目4</p>
                     <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
@@ -432,7 +432,7 @@
             </div>
             <div class="row clearfix">
                 <!--                        栏目5-->
-                <div id="channel-5" class="col-md-6  col-lg-6 column ">
+                <div id="channel-5" class="col-md-6  col-lg-6 col-sm-6 column ">
 
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目5</p>
                     <ul class="nav nav-tabs child-channel">
@@ -467,7 +467,7 @@
                     </ul>
                 </div>
                 <!--                栏目6-->
-                <div id="channel-6" class="col-md-6 col-lg-6 column">
+                <div id="channel-6" class="col-md-6 col-lg-6 col-sm-6 column">
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目6</p>
                     <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
@@ -504,7 +504,7 @@
 
         </div>
         <!--        侧栏-->
-        <div class="col-md-3  col-lg-3 column" style="background: white;margin-top: 30px">
+        <div class="col-md-3  col-lg-3 col-sm-6 column" style="background: white;margin-top: 30px">
             <br>
             <div class="row clearfix side-title" id="side-newest" >
                 <div class="col-md-6 ">
