--- a/index_dede_label.html
+++ b/index_dede_label.html
@@ -557,13 +557,12 @@
     </div>
 </div>
 <hr style="   height: 1px;border: none; background-color: #CCCCCC">
-<div class="container">
-    <!--    <p>导航链接：</p>-->
+<!--    <p>导航链接：</p>-->
+<div class="container" id="friend_link">
     <div class="row clearfix">
-        <div class="col-lg-1 col-md-1">
-            <!--            <p>链接导航</p>-->
+        <div class="col-lg-1 col-md-1 hidden-sm hidden-xs">
         </div>
-        <div class="col-lg-2 col-md-2">
+        <div class="col-lg-2 col-md-2 col-sm-2">
             <div class="btn-group dropup">
                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                     &#12288;银保监会网站&#12288;
@@ -578,7 +577,7 @@
                 </ul>
             </div>
         </div>
-        <div class="col-lg-2 col-md-2">
+        <div class="col-lg-2 col-md-2 col-sm-2">
             <div class="btn-group dropup">
                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                     银保监会应用系统
@@ -598,7 +597,7 @@
                 </ul>
             </div>
         </div>
-        <div class="col-lg-2 col-md-2">
+        <div class="col-lg-2 col-md-2 col-sm-2">
             <div class="btn-group dropup">
                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                     云南局应用系统
@@ -618,7 +617,7 @@
                 </ul>
             </div>
         </div>
-        <div class="col-lg-2 col-md-2">
+        <div class="col-lg-2 col-md-2 col-sm-2">
             <div class="btn-group dropup">
                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                     &#12288;云南各分局 &#12288;
@@ -643,7 +642,7 @@
                 </ul>
             </div>
         </div>
-        <div class="col-lg-2 col-md-2">
+        <div class="col-lg-2 col-md-2 col-sm-2">
             <div class="btn-group dropup">
                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                     &#12288;省外监管局 &#12288;
@@ -658,7 +657,7 @@
                 </ul>
             </div>
         </div>
-        <div class="col-lg-1 col-md-1"></div>
+        <div class="col-lg-1 col-md-1 hidden-sm hidden-xs"></div>
 
     </div>
 </div>
